<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_bar"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layout_show"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <ImageView
                    android:id="@+id/img_show"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_audiotrack_black_24dp"/>

                <TextView
                    android:id="@+id/tv_show_title"
                    style="@style/TextTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/tv_show_title"/>
            </LinearLayout>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/et_production"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_production"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="@dimen/edit_text_textsize"
                app:met_floatingLabel="highlight"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/et_stage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_stage"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="@dimen/edit_text_textsize"
                app:met_floatingLabel="highlight"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/et_audience_total"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1"
                    android:hint="@string/et_audience"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:textSize="@dimen/edit_text_textsize"
                    app:met_floatingLabel="highlight"/>

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/et_audience_children"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginStart="4dp"
                    android:layout_weight="1"
                    android:hint="@string/et_nbr_childs"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:textSize="@dimen/edit_text_textsize"
                    app:met_floatingLabel="highlight"/>
            </LinearLayout>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/et_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_comment"
                android:textSize="@dimen/edit_text_textsize"
                app:met_floatingLabel="highlight"/>

            <LinearLayout
                android:id="@+id/layout_times"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <ImageView
                    android:id="@+id/img_times"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_access_time_black_24dp"/>

                <TextView
                    android:id="@+id/tv_times_title"
                    style="@style/TextTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/tv_title_times"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/et_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/et_date"
                    android:imeOptions="actionNext"
                    android:inputType="date"
                    android:textSize="@dimen/edit_text_textsize"
                    app:met_floatingLabel="highlight"/>

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/et_planned_starttime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/et_planned_starttime"
                    android:textSize="@dimen/edit_text_textsize"
                    app:met_floatingLabel="highlight"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/et_actual_starttime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/et_actual_starttime"
                    android:textSize="@dimen/edit_text_textsize"
                    app:met_floatingLabel="highlight"/>

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/et_stoptime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginStart="4dp"
                    android:layout_weight="1"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/et_stop_time"
                    android:textSize="@dimen/edit_text_textsize"
                    app:met_floatingLabel="highlight"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <ImageView
                    android:id="@+id/img_weather"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_cloud_queue_black_24dp"/>

                <TextView
                    android:id="@+id/tv_weather_title"
                    style="@style/TextTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:text="Väder"/>
            </LinearLayout>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/et_weather_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:hint="Väder"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="@dimen/edit_text_textsize"
                app:met_floatingLabel="highlight"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/et_weather_temperature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:hint="Temperatur"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLines="1"
                android:textSize="@dimen/edit_text_textsize"
                app:met_floatingLabel="highlight"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <ImageView
                    android:id="@+id/img_more"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_more_horiz_black_24dp"/>

                <TextView
                    android:id="@+id/tv_other_title"
                    style="@style/TextTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/tv_other_title"/>
            </LinearLayout>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/et_fill_material"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:hint="@string/et_fill_material"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="@dimen/edit_text_textsize"
                app:met_floatingLabel="highlight"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/et_lost_found"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:hint="@string/et_lost_found"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="@dimen/edit_text_textsize"
                app:met_floatingLabel="highlight"/>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">


        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@drawable/shadow"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_send_sms"
                style="?android:borderlessButtonStyle"
                android:layout_width="0dp"

                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/btn_send_sms"
                android:src="@drawable/ic_message_black_24dp"/>

            <ImageButton
                android:id="@+id/btn_send_email"
                style="?android:borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/btn_send_mail"
                android:src="@drawable/ic_email_black_24dp"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>